# IceStorm

./: .gitignore  CMakeLists.txt  IceStorm.sln  README.md
Data/Saves/: save.txt
IceStorm/: Builder.cpp  Builder.h  C_Rect.cpp  C_Rect.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Controller.cpp  Controller.h  Dialog_Engine.cpp  Dialog_Engine.h  Engine_Manager.cpp  Engine_Manager.h  Events_Manager.cpp  Events_Manager.h  Fight_Handler.h  Generic_Object.cpp  Generic_Object.h  Global_Flags.h  IceStorm.vcxproj  IceStorm.vcxproj.filters  Map.cpp  Map.h  Mode_Handler.h  Moving_Unit.cpp  Moving_Unit.h  Objects_Manager.cpp  Objects_Manager.h  Paths.cpp  Paths.h  Renderer.cpp  Renderer.h  Source.cpp  Sprites_Handler.cpp  Sprites_Handler.h  Text_Printer.cpp  Text_Printer.h  Textures_Manager.cpp  Textures_Manager.h  (+2 more)
IceStorm/Dialogs/: dialog.txt
IceStorm/Entities/: ent_data.txt
IceStorm/Levels/: default.txt  flowey  level.txt  mabite  maintest.txt  ripof
IceStorm/Polices/: asciiList.txt
IceStorm/Saves/: save.txt
IceStorm/Textures/: asciiList.txt  texturesList.txt
Yui/: Neuron.h  Source.cpp  Yui.vcxproj  Yui.vcxproj.filters
libs/imgui-1.82/: example.cpp  imgui_demo.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h
src/: Audio_Manager.cpp  Audio_Manager.h  Builder.cpp  Builder.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Controller.cpp  Controller.h  Editor.cpp  Editor.h  Engine_Manager.cpp  Engine_Manager.h  Events_Manager.cpp  Events_m.cpp  Fight_Handler.cpp  Fight_Handler.h  Generic_Object.cpp  Generic_Object.h  Global_Flags.h  Map.h  Moving_Unit.cpp  Moving_Unit.h  Objects_Manager.cpp  Objects_Manager.h  Paths.cpp  Paths.h  Renderer.cpp  Renderer.h  Source.cpp  TODO  TODO.txt  Text_Printer.cpp  Textures_Manager.cpp  Textures_Manager.h  imgui.ini  main.cpp
src/Levels/: ripof  (+3 more)
(+75 files in other folders)
